@@ -1,8 +1,8 @@
 Package: NGScopy
 Type: Package
-Version: 1.2.1
-Date: 2015-10-05 14:03:04 EDT
-Title: NGScopy: Detection of copy number variations in next generation
+Version: 1.2.2
+Date: 2015-10-07 09:40:01 EDT
+Title: NGScopy: Detection of Copy Number Variations in Next Generation Sequencing
     sequencing
 Description: NGScopy provides a quantitative caller for detecting copy number
     variations in next generation sequencing (NGS), including whole genome
@@ -18,18 +18,20 @@ Depends:
 Imports:
     methods,
     parallel,
-    Xmisc (<= 0.2.1),
+    Xmisc (>= 0.2.1),
     rbamtools (>= 2.6.0),
-    changepoint (<= 1.1.5)
+    changepoint (>= 2.1.1)
 Suggests:
     RUnit,
     NGScopyData,
     GenomicRanges
 Collate:
     'NGScopy-package.R'
+    'interface-to-cran-changepoint.R'
     'ngscopy-internal.R'
     'ngscopy.R'
     'ngscopy-test.R'
+    'archive.R'
 Authors@R: c(
     person("Xiaobei", "Zhao", email="xiaobei@binf.ku.dk",
     role=c("aut", "cre", "cph"))
