@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/ngscopy-test.R
 \name{ngscopy_cmdline_example}
 \alias{ngscopy_cmdline_example}
 \title{Run an example of NGScopy at UNIX-like command line}
